--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <p class="logo">SPLITWISE...</p>
         <div class="links">
             <span><a href='../../activity.html'>Activity</a></span>
             <span><a href='../../friends.html'>Friends</a></span>
@@ -25,7 +26,15 @@
             split bills among the members, allowing everyone to keep track of who owes what to whom. The app also offers
             various features such as reminders, comments, and multiple currency support, making it an essential tool for
             anyone who frequently splits bills with others.</p>
+            <div class="buttons">
+            <span><button type="button" class="signup">Log in</button></span>
+            <span><button type="button"class="signup">Sign up</button></span>
+        </div>
     </div>
+    <footer>
+        <div class="footer-copy">&#169; Copyrights 2023 || Splitwise</div>
+        <div class="footer-about">Learn more about Splitwise<a href='./home.html'>here.</a></div>
+     </footer>
 </body>
 
 </html>
