--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,7 @@
             <span><a href='../../activity.html'>Activity</a></span>
             <span><a href='../../friends.html'>Friends</a></span>
             <span><a href='../../groups.html'>Groups</a></span>
+            <span><a href='./profile.html'><img src="profile.png" alt="profile"></a></span>
         </div>
     </header>
     <div class="header">
@@ -17,11 +18,11 @@
     </div>
    
     <div class="boxes-wrapper">
-        <div class="box">
+        <div class="box1">
             <h2>You Owe</h2>
             <p>---</p>
         </div>
-        <div class="box">
+        <div class="box2">
             <h2>You Are Owed</h2>
             <p>---</p>
         </div>
