--- a/home.html
+++ b/home.html
@@ -9,13 +9,14 @@
     <title>Home</title>
 </head>
 
-<body>
+<body id="full">
     <header>
         <p class="logo">SPLITWISE...</p>
         <div class="links">
             <span><a href='../../activity.html'>Activity</a></span>
             <span><a href='../../friends.html'>Friends</a></span>
             <span><a href='../../groups.html'>Groups</a></span>
+            <span><a href='../../profile.html'><img src="profile.png" alt="profile"></a></span>
         </div>
     </header>
     <div>
@@ -27,14 +28,16 @@
             various features such as reminders, comments, and multiple currency support, making it an essential tool for
             anyone who frequently splits bills with others.</p>
             <div class="buttons">
-            <span><button type="button" class="signup">Log in</button></span>
-            <span><button type="button"class="signup">Sign up</button></span>
+            <a href="login.html"><span><button type="button" class="login">Log in</button></span></a>
+            <a href="signup.html"><span><button type="button"class="signup">Sign up</button></span></a>
         </div>
+        <div class="formbox"></div>
     </div>
     <footer>
         <div class="footer-copy">&#169; Copyrights 2023 || Splitwise</div>
         <div class="footer-about">Learn more about Splitwise<a href='./home.html'>here.</a></div>
      </footer>
+     <script src="home.js"></script>
 </body>
 
 </html>
